--- a/plugins/base/frontend/package.json
+++ b/plugins/base/frontend/package.json
@@ -36,6 +36,7 @@
     "postcss-preset-env": "^6.7.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-scrollspy": "^3.4.3",
     "redbox-react": "^1.6.0",
     "ts-loader": "^7.0.0",
     "typescript": "^3.8.3",
