--- a/plugins/base/frontend/package.json
+++ b/plugins/base/frontend/package.json
@@ -30,6 +30,7 @@
     "@types/node": "^12.12.36",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
+    "@types/react-scrollspy": "^3.3.3",
     "babel-loader": "^8.0.6",
     "lodash": "^4.17.19",
     "postcss-import": "^12.0.1",
