--- a/integration-tests/maven/projects/it-maven/pom.xml
+++ b/integration-tests/maven/projects/it-maven/pom.xml
@@ -123,14 +123,6 @@
 
                     <!-- Disable linking to online JDK documentation -->
                     <noJdkLink>false</noJdkLink>
-                    <customAssets>
-                        <dir>${project.basedir}/customResources/custom-resource.svg</dir>
-                    </customAssets>
-
-                    <customStylesheets>
-                        <dir>${project.basedir}/customResources/logo-styles.css</dir>
-                        <dir>${project.basedir}/customResources/custom-style-to-add.css</dir>
-                    </customStylesheets>
 
                     <!-- Allows to customize documentation generation options on a per-package basis -->
                     <perPackageOptions>
@@ -145,6 +137,17 @@
                             <includeNonPublic>false</includeNonPublic>
                         </packageOptions>
                     </perPackageOptions>
+                    <pluginsConfiguration>
+                        <org.jetbrains.dokka.base.DokkaBase>
+                            <customAssets>
+                                <customAsset>${project.basedir}/customResources/custom-resource.svg</customAsset>
+                            </customAssets>
+                            <customStyleSheets>
+                                <customStyleSheet>${project.basedir}/customResources/logo-styles.css</customStyleSheet>
+                                <customStyleSheet>${project.basedir}/customResources/custom-style-to-add.css</customStyleSheet>
+                            </customStyleSheets>
+                        </org.jetbrains.dokka.base.DokkaBase>
+                    </pluginsConfiguration>
                 </configuration>
             </plugin>
         </plugins>
